--- a/html/css/style.css
+++ b/html/css/style.css
@@ -68,16 +68,16 @@ a, a:hover, a:focus {
 
 
 #sidebar {
-    min-width: 250px;
-    max-width: 250px;
-    background: rgb(0, 0, 0);
+    min-width: 175px;
+    max-width: 175px;
+    background:#D1232C;
     color: #fff;
     transition: all 0.6s cubic-bezier(0.945, 0.020, 0.270, 0.665);
     transform-origin: bottom left;
 }
 
 #sidebar.active {
-    margin-left: -250px;
+    margin-left: -175px;
     transform: rotateY(100deg);
 }
 
@@ -182,11 +182,11 @@ ul.CTAs a {
     background: #6c757d;
 }
 
-.btn-primary {
+/* .btn-primary {
     color: #fff;
     background-color: #6c757d;
     border-color: #6c757d;
-}
+} */
 
 form  {
     margin: 60px 0 0 0 !important;
@@ -230,7 +230,7 @@ canvas {
 ----------------------------------------------------- */
 @media (max-width: 768px) {
     #sidebar {
-        margin-left: -250px;
+        margin-left: -175px;
         transform: rotateY(90deg);
     }
     #sidebar.active {
